src/cards-of-zeal-view.css
@import "tailwindcss";

@plugin "daisyui" {
    root: ":host"; /* select shadow root */
    themes: false; /* inherit from document */
    include: button, checkbox, dropdown, menu, select, join, tooltip, swap, list, collapse;
}

:host {
    @apply flex flex-col justify-center h-full items-center select-none;
    background: none;
    --card-width: calc(clamp(min(200px, calc(100vw - 16px)), 60vmin, 420px));
    --card-height: calc((4/3) * var(--card-width));
    --max-card-width: 420px;
    --max-card-height: calc((4/3) * var(--max-card-width));
}

:host, [data-theme] {
    @apply bg-transparent;
    font-family: inherit;
    color-scheme: inherit;
    --color-primary: inherit;
    --color-primary-content: inherit;
}

swiper-container, .todo-list-wrapper {
    @apply absolute z-0;
}

.todo-list-wrapper {
    @apply pt-18 inset-0 overflow-y-auto;
}

.todo-list .collapse {
    @apply cursor-pointer;
    background-color: var(--bg-color);
    color: var(--fg-color, white);
}

swiper-container[effect="slider"] {
    @apply inset-0;
}

swiper-container[effect="cards"] {
    aspect-ratio: 3 / 4;
    width: var(--card-width);
}

swiper-slide {
    @apply flex items-center justify-center text-xl font-bold text-white select-none;
    background-color: var(--bg-color);
    color: var(--fg-color, white);
    box-shadow: rgba(0, 0, 0, 0.05) 0px 6px 24px 0px, rgba(0, 0, 0, 0.08) 0px 0px 0px 1px;
}

.slide-content {
    @apply text-center px-8;
}

swiper-container[effect="cards"] swiper-slide {
    border-radius: 18px;
}

.top-left-toolbar, .top-right-toolbar {
    @apply absolute top-4 flex flex-row items-center z-[1] gap-3;
}

.top-left-toolbar {
    @apply left-4;
}

.top-right-toolbar {
    @apply right-4;
}

.bottom-toolbar {
    @apply absolute z-[1];
    bottom: calc(max(16px, 50vh - (var(--card-height) / 2) - 64px));
}

:host:has(swiper-container:not([effect="cards"])) .bottom-toolbar, :host:has(.todo-list-wrapper) .bottom-toolbar {
    bottom: calc(max(16px, 50vh - (var(--max-card-height) / 2) - 64px));
}

select {
    @apply text-left;
}

select:focus-visible, option:focus-visible {
    @apply outline-none;
}

button, input, select, .btn, .swap, .collapse-title, .collapse-content {
    cursor: default !important;
}

.task-list-task-title {
    min-width: 0;
    @apply truncate;
}

/* Underline effect */

.underline-effect-input ~ * .underline-effect-target {
    min-width: 0;
    position: relative;
    text-decoration: none;
}

.underline-effect-input ~ * .underline-effect-target::before {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 2px;
    bottom: -2px;
    left: 0;
    background-color: currentColor;
    transform: scaleX(0);
    transform-origin: top left;
    transition: transform 0.3s ease;
}

.underline-effect-input:checked ~ * .underline-effect-target::before {
    transform: scaleX(1);
}

/* Dropdown radio control */

.dropdown-radio {
    @apply btn btn-sm btn-ghost justify-start mx-2;
    font-family: inherit;
    font-weight: inherit;
    font-size: inherit;
}

